solve the problem with section height on mobile device

--- a/src/scss/sections/experts.scss
+++ b/src/scss/sections/experts.scss
@@ -7,7 +7,7 @@
   }
 
   @media (max-width: 479.98px) {
-    padding: 40px 0px;
+    padding: 40px 0px 10px 0px;
   }
 
   &__body {
